<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@color/orange">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/promptTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:fontFamily="sans-serif"
        android:includeFontPadding="false"
        android:text="@string/prompt_result"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/nameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:text="@string/name"
        app:layout_constraintTop_toBottomOf="@id/promptTv"
        app:layout_constraintLeft_toLeftOf="@+id/promptTv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/nameResultTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        app:layout_constraintTop_toBottomOf="@id/nameTv"
        app:layout_constraintLeft_toLeftOf="@+id/nameTv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/emailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:text="@string/email_result"
        app:layout_constraintTop_toBottomOf="@id/nameResultTv"
        app:layout_constraintLeft_toLeftOf="@+id/nameResultTv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/emailResultTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        app:layout_constraintTop_toBottomOf="@id/emailTv"
        app:layout_constraintLeft_toLeftOf="@+id/emailTv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/passwordTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:text="@string/password_result"
        app:layout_constraintTop_toBottomOf="@id/emailResultTv"
        app:layout_constraintLeft_toLeftOf="@+id/emailResultTv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/passwordResultTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        app:layout_constraintTop_toBottomOf="@id/passwordTv"
        app:layout_constraintLeft_toLeftOf="@+id/passwordTv" />

</androidx.constraintlayout.widget.ConstraintLayout>